<resources>
    <string name="app_name">Shake 4 Help</string>
    <string name="primerActivityTitle">Bienvenido a Shake4Health!</string>
    <string name="primerActivitySubtitle">A continuación por favor ingrese su número de celular para confirmar su identidad.</string>
    <string name="send_sms">ENVIAR CÓDIGO</string>
    <string name="ingrese_su_numero_de_telefono">Ingrese su número de teléfono</string>
    <string name="ingrese_el_codigo">Ingrese el código</string>
    <string name="validar_codigo">Para finalizar con esta validación, por favor ingrese a continuación el código que recibió por SMS</string>
    <string name="send_codigo">SEND CODIGO</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrarse_text">Por favor completa los siguientes datos para crear una cuenta</string>
    <string name="no_tenes_cuenta">No tenes una cuenta? Registrarse</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="reingresar_telefono">CAMBIAR TELÉFONO</string>
    <string name="ingresar">INGRESAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="email">Email</string>
    <string name="comision">Comision</string>
    <string name="grupo">Grupo</string>
    <string name="menu">Menú Principal</string>
    <string name="tomar_temperatura">Tomar temperatura</string>
    <string name="historial_de_mediciones">Historial de mediciones</string>
    <string name="medir">MEDIR</string>
    <string name="medir_otra">VOLVER A MEDIR</string>
    <string name="para_tomar_la_temperatura_presione_el_bot_n_medir_y_lleve_su_celular_a_la_axila_mantenga_el_celular_all_por_2_minutos_una_vez_pasado_el_tiempo_el_celular_vibrar_indicando_que_la_temperatura_ya_fue_tomada_y_el_celular_se_puede_retirar">Para tomar la temperatura, presione el botón medir y lleve su celular a la axila, mantenga el celular allí por 10 segundos. Una vez pasado el tiempo, el celular vibrará indicando que la temperatura ya fue tomada y el celular se puede retirar.</string>
    <string name="token_expirado">Su token de acceso ha expirado!</string>
    <string name="como_proceder">¿Cómo desea proceder?</string>
    <string name="refrescar">Refrescar</string>
    <string name="salir">Salir</string>
    <string name="archivo_preferences">com.example.proyecto.ARCHIVO_PROYECTO</string>
    <string name="regresar">REGRESAR</string>
    <string name="llamar_ayuda">LLAMAR AYUDA</string>
</resources>
